--- a/src/.vscode/tasks.json
+++ b/src/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "identifier": "typescript",
             "type": "typescript",
-            "tsconfig": "debug-tsconfig.json",
+            "tsconfig": "tsconfig.json",
             "problemMatcher": [
                 "$tsc"
             ]
