add route wrapper feature & try-catch wrapper & add debug support for local api

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "identifier": "typescript",
             "type": "typescript",
-            "tsconfig": "tsconfig.json",
+            "tsconfig": "debug-tsconfig.json",
             "problemMatcher": [
                 "$tsc"
             ]
