--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@o-galaxy/ether",
-  "version": "1.1.0-beta.0",
+  "version": "1.1.0",
   "description": "Rest Api Framework",
   "main": "index.js",
   "types": "index.d.ts",
