--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,24 @@
                 "${workspaceFolder}/dist/**/*.js"
             ],
             
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Mocha All",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "env": {"NODE_ENV": "testing"},
+            "args": [
+                "-r",
+                "ts-node/register",
+                "--timeout",
+                "999999",
+                "--colors",
+                "${workspaceFolder}/tests/**/**/*.test.ts",
+            ],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "protocol": "inspector"
         }
     ]
 }
