--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,11 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           registry-url: https://registry.npmjs.org
+      - name: install
+        run: npm install
       - name: pack
         run: npm run pack-script
-      - name: install
+      - name: install-tests
         run: npm run install:all-app
       - name: test
         run: npm run test
